panko-compiletest/src/snapshots/panko_compiletest__scope-panko__tests__cases__execute__call__test_call_varargs_with_params_on_stack.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/call/test_call_varargs_with_params_on_stack.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition
      main~1 `fn(argc: int, argv: ptr<ptr<char>>) -> int`
      (params
         argc~2 `int`
         argv~3 `ptr<ptr<char>>`)
      (compound-statement
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (deref (add (name argv~3 `ptr<ptr<char>>`) 1))
               1
               2
               3
               4
               5
               6
               7
               8
               9
               (add (name argc~2 `int`) 42))))))

----- stderr -----
