panko-compiletest/src/snapshots/panko_compiletest__scope-panko__tests__cases__execute__call__test_return_void_from_void_function.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/call/test_return_void_from_void_function.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      f~0 `fn() -> void`
      (compound-statement))
   (function-definition
      g~1 `fn() -> void`
      (compound-statement
         (return (call (name f~0 `fn() -> void`)))))
   (function-definition
      main~2 `fn() -> int`
      (compound-statement
         (expression (call (name g~1 `fn() -> void`))))))

----- stderr -----
